fix footer overlap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,11 +27,11 @@
 
   html {
     // background-color: rgb(234, 234, 234);
-    overflow-x: hidden;
+    // overflow-x: hidden;
     // min-height: 100vh;
   }
   html, body, #root, .app, .app>div {
-  height: 100vh;
+  // height: 100vh;
 
   font-family: "Neue Plak",-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",Helvetica,Tahoma,Arial,sans-serif;
   // background-color: rgb(253, 253, 253);
