--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -146,7 +146,7 @@ div{
 }
   
   .events-title {
-    padding-top: 30px;
+    padding-top: 40px;
     display: block;
     // margin-left: 10%;
     padding-left: 10%;
