--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -6,7 +6,7 @@
   position: absolute;
   overflow: hidden;
   width: 100%;
-
+  height: 100vh;
   .modal-container {
     position: fixed;
     z-index: 99;
