--- a/app/assets/stylesheets/tickets.scss
+++ b/app/assets/stylesheets/tickets.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: relative;
+    position: absolute;
     width: 600px;
     top: 15%;
     margin-left: 450px;
